store-app/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      component: frontend
  template:
    metadata:
      labels:
        component: frontend
    spec:
      containers:
        - name: store-frontend-app
          image: bukalra2/store-frontend:1.0.4
          imagePullPolicy: Always
          ports:
            - containerPort: 80
