store-app/k8s/mysqldb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysqldb
spec:
  replicas: 1
  selector:
    matchLabels:
      component: database
  template:
    metadata:
      labels:
        component: database
    spec:
      containers:
        - name: mysqldb
          image: bukalra2/store-database:1.0.2
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysqldb-storage
              mountPath: /data/db
      volumes:
        - name: mysqldb-storage
          persistentVolumeClaim:
            claimName: mysqldb-pvc
