store-app/k8s/mysqldb-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysqldb-cluster-ip-service
spec:
  ports:
    - name: db
      protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    component: database
