store-app/k8s/notifications-api-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: notifications-api-cluster-ip-service
spec:
  type: ClusterIP
  ports: 
    - port: 5001
  selector:
    component: notifications-api
