store-app/k8s/products-api-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: products-api-cluster-ip-service
spec:
  type: ClusterIP
  ports: 
    - port: 8080
      targetPort: 8080
  selector:
    component: products-api
