store-app/k8s/rabbitmq-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: rabbitmq-cluster-ip-service
spec:
  type: ClusterIP
  ports: 
    - port: 5672
  selector:
    component: rabbitmq
